@@ -29,6 +29,103 @@ class WC_Stripe_UPE_Payment_Method_Multibanco extends WC_Stripe_UPE_Payment_Meth
 		);
 
 		add_filter( 'wc_stripe_allowed_payment_processing_statuses', [ $this, 'add_allowed_payment_processing_statuses' ], 10, 2 );
+
+		add_action( 'wc_gateway_stripe_process_payment_intent_requires_action', [ $this, 'save_instructions' ], 10, 2 );
+		add_action( 'woocommerce_thankyou_stripe_multibanco', [ $this, 'thankyou_page' ] );
+		add_action( 'woocommerce_email_before_order_table', [ $this, 'email_instructions' ], 10, 3 );
+	}
+
+	/**
+	 * Output for the order received page.
+	 *
+	 * @param int $order_id
+	 */
+	public function thankyou_page( $order_id ) {
+		$order = wc_get_order( $order_id );
+		if ( ! $order ) {
+			return;
+		}
+
+		$this->get_instructions( $order );
+	}
+
+	/**
+	 * Add content to the WC emails.
+	 *
+	 * @param WC_Order $order
+	 * @param bool     $sent_to_admin
+	 * @param bool     $plain_text
+	 */
+	public function email_instructions( $order, $sent_to_admin, $plain_text = false ) {
+		$payment_method = $order->get_payment_method();
+		if ( ! $sent_to_admin && 'stripe_multibanco' === $payment_method && $order->has_status( 'on-hold' ) ) {
+			$this->get_instructions( $order, $plain_text );
+		}
+	}
+
+	/**
+	 * Gets Multibanco payment instructions for the customer.
+	 *
+	 * @param WC_Order $order
+	 * @param bool     $plain_text
+	 */
+	public function get_instructions( $order, $plain_text = false ) {
+		$data = $order->get_meta( '_stripe_multibanco' );
+		if ( ! $data ) {
+			return;
+		}
+
+		if ( $plain_text ) {
+			esc_html_e( 'MULTIBANCO ORDER INFORMATION', 'woocommerce-gateway-stripe' ) . "\n\n";
+			echo "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n\n";
+			esc_html_e( 'Amount:', 'woocommerce-gateway-stripe' ) . "\n\n";
+			echo wp_kses_post( $data['amount'] ) . "\n\n";
+			echo "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n\n";
+			esc_html_e( 'Entity:', 'woocommerce-gateway-stripe' ) . "\n\n";
+			echo esc_html( $data['entity'] ) . "\n\n";
+			echo "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n\n";
+			esc_html_e( 'Reference:', 'woocommerce-gateway-stripe' ) . "\n\n";
+			echo esc_html( $data['reference'] ) . "\n\n";
+		} else {
+			?>
+			<h3><?php esc_html_e( 'MULTIBANCO ORDER INFORMATION', 'woocommerce-gateway-stripe' ); ?></h3>
+			<ul class="woocommerce-order-overview woocommerce-thankyou-order-details order_details">
+				<li class="woocommerce-order-overview__order order">
+					<?php esc_html_e( 'Amount:', 'woocommerce-gateway-stripe' ); ?>
+					<strong><?php echo wp_kses_post( $data['amount'] ); ?></strong>
+				</li>
+				<li class="woocommerce-order-overview__order order">
+					<?php esc_html_e( 'Entity:', 'woocommerce-gateway-stripe' ); ?>
+					<strong><?php echo esc_html( $data['entity'] ); ?></strong>
+				</li>
+				<li class="woocommerce-order-overview__order order">
+					<?php esc_html_e( 'Reference:', 'woocommerce-gateway-stripe' ); ?>
+					<strong><?php echo esc_html( $data['reference'] ); ?></strong>
+				</li>
+			</ul>
+			<?php
+		}
+	}
+
+
+	/**
+	 * Saves Multibanco information to the order meta for later use.
+	 *
+	 * @param object $order
+	 * @param object $payment_intent. The PaymentIntent object.
+	 */
+	public function save_instructions( $order, $payment_intent ) {
+		if ( empty( $payment_intent->next_action->multibanco_display_details ) ) {
+			return;
+		}
+
+		$data = [
+			'amount'    => $order->get_formatted_order_total(),
+			'entity'    => $payment_intent->next_action->multibanco_display_details->entity,
+			'reference' => $payment_intent->next_action->multibanco_display_details->reference,
+		];
+
+		$order->update_meta_data( '_stripe_multibanco', $data );
 	}
 
 	/**
